--- a/templates/base.jade
+++ b/templates/base.jade
@@ -30,7 +30,11 @@ html(lang="es")
                         | {% if user.is_authenticated %}
                         li(class="dropdown avatar")
                             a(href="#",class="dropdown-toggle",data-toggle="dropdown",role="button",aria-haspopup="true",aria-expanded="false")
-                                img(src='{{user.photo}}')
+                                |{% if user.photo != None %}
+                                img(src="{{user.photo}}")
+                                |{% else %}
+                                img(src="{% static 'imagenes/unknown_user.png' %}")
+                                |{% endif %}
                                 span(class="caret")
                             ul(class="dropdown-menu user-options")
                                 li
@@ -45,9 +49,9 @@ html(lang="es")
                                 li
                                     a(href="/logout/") Salir
                                         span(class="glyphicon glyphicon-log-out pull-left")
-                        |{% else %}
-                        button(type="button",class="btn btn-success navbar-btn",data-toggle="modal",data-target="#login-social") Iniciar Sesión
                         | {% endif %}
+                        block navbar_options
+
         div(style="margin-top:50px;")
         button(value="{{user.identificacion}}",style="display:none;",id="identificacion")
         block body_content
