Register button home

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -269,8 +269,11 @@ label
   font-size 10px
   margin 0
 
-.navbar-btn
-  margin 8px 20px
+.navbar-btn-right
+  margin 8px 20px 8px 8px
+
+.navbar-btn-left
+  margin 8px 8px 8px 20px
 
 .btn-modal
   margin 10px
