Show password register

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -392,3 +392,9 @@ ul
   @media large
     border-right none
     border-bottom solid 1px rgb(200,200,200)
+
+.pass
+  width 90%
+
+.eye
+  width 10%
