--- a/templates/hv/inicio.jade
+++ b/templates/hv/inicio.jade
@@ -11,7 +11,9 @@ block body_content
     div(class="container-fluid banner-hv")
         div(class="row")
             div(class="col-sm-4")
-                |{% if user.photo != None %}
+                |{% if user.photo_email != "" %}
+                img(class="avatar-account img-responsive center-block",src="{{user.photo_email}}")
+                |{% elif user.photo != None %}
                 img(class="avatar-account img-responsive center-block",src="{{user.photo}}")
                 |{% else %}
                 img(class="avatar-account img-responsive center-block",src="{% static 'imagenes/unknown_user.png' %}")
