--- a/templates/ofertas/inicio.jade
+++ b/templates/ofertas/inicio.jade
@@ -5,7 +5,7 @@ block titulo
 block body_content
     div(class="container-fluid ofertas")
         div(class="row")
-            div(class="col-sm-3")
+            div(class="col-sm-3 margin-sm")
                 div(class="filtros text-center")
                     p Filtros
 
