--- a/templates/hv/inicio.jade
+++ b/templates/hv/inicio.jade
@@ -12,11 +12,14 @@ block body_content
         div(class="row")
             div(class="col-sm-4")
                 |{% if user.photo_email != "" %}
-                img(class="avatar-account img-responsive center-block",src="{{user.photo_email}}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{{ MEDIA_URL }}{{user.photo_email}}")
                 |{% elif user.photo != None %}
-                img(class="avatar-account img-responsive center-block",src="{{user.photo}}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{{user.photo}}")
                 |{% else %}
-                img(class="avatar-account img-responsive center-block",src="{% static 'imagenes/unknown_user.png' %}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{% static 'imagenes/unknown_user.png' %}")
                 |{% endif %}
             div(class="col-sm-8 information-user")
                 p(class="text-text-left fullname-account") {{user.fullname}}
