--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -134,7 +134,18 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
 .avatar-account
   height 200px
   width 200px
+  overflow:hidden;
   border-radius 50%
+
+.avatar-account img
+  max-height 100%
+  -webkit-transform translate(-50%)
+  margin-left 100px
+
+
+
+
+
 
 .fullname-account
   color white
