--- a/templates/accounts/perfil.jade
+++ b/templates/accounts/perfil.jade
@@ -10,11 +10,14 @@ block body_content
         div(class="row")
             div(class="col-sm-4")
                 |{% if user.photo_email != "" %}
-                img(class="avatar-account img-responsive center-block",src="{{user.photo_email}}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{{ MEDIA_URL }}{{user.photo_email}}")
                 |{% elif user.photo != None %}
-                img(class="avatar-account img-responsive center-block",src="{{user.photo}}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{{user.photo}}")
                 |{% else %}
-                img(class="avatar-account img-responsive center-block",src="{% static 'imagenes/unknown_user.png' %}")
+                div(class="avatar-account")
+                    img(class="center-block",src="{% static 'imagenes/unknown_user.png' %}")
                 |{% endif %}
             div(class="col-sm-8 information-user")
                 p(class="text-text-left fullname-account") {{user.fullname}}
@@ -38,7 +41,7 @@ block body_content
     div(class="container-fluid")
         div(class="row")
             div(class="col-sm-10 col-sm-offset-1")
-                form(action="",method="POST",class="form-perfil")
+                form(action="",method="POST",enctype="multipart/form-data",class="form-perfil")
                     |{% csrf_token %}
                     |{% crispy form %}
 
