--- a/templates/accounts/perfil.jade
+++ b/templates/accounts/perfil.jade
@@ -10,13 +10,13 @@ block body_content
         div(class="row")
             div(class="col-sm-4")
                 |{% if user.photo_email != "" %}
-                div(class="avatar-account")
+                div(class="avatar-account center-block")
                     img(class="center-block",src="{{ MEDIA_URL }}{{user.photo_email}}")
                 |{% elif user.photo != None %}
-                div(class="avatar-account")
+                div(class="avatar-account center-block")
                     img(class="center-block",src="{{user.photo}}")
                 |{% else %}
-                div(class="avatar-account")
+                div(class="avatar-account center-block")
                     img(class="center-block",src="{% static 'imagenes/unknown_user.png' %}")
                 |{% endif %}
             div(class="col-sm-8 information-user")
