--- a/static/css/base.css
+++ b/static/css/base.css
@@ -461,3 +461,27 @@ ul li {
   font-size: 14px;
   max-width: 800px;
 }
+#photo_email-clear_id {
+  display: inline-block;
+}
+.oferta-card {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+}
+.title-oferta-detail {
+  color: #25944d;
+  font-weight: bold;
+  font-size: 18px;
+  border-top: solid 2px #d9d9d9;
+  margin-top: 20px;
+  padding-top: 20px;
+}
+.salario {
+  font-weight: bold;
+  margin-bottom: 0;
+  margin-top: 20px;
+}
+.ul-style {
+  list-style: disc;
+}
