--- a/templates/base.jade
+++ b/templates/base.jade
@@ -69,7 +69,7 @@ html(lang="es")
                             li(class="fa fa-twitter-square fa-2x")
                             li(class="fa fa-skype fa-2x")
                     div(class="col-md-12 text-center creador")
-                        p Desarrollado por Diego Andres Fonseca | &copy2016
+                        p Desarrollado por Diego Andres Fonseca | dandresfsoto@gmail.com | &copy2016
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.js")
         script(src="{% static 'js/moment.es.js' %}")
