--- a/templates/base.jade
+++ b/templates/base.jade
@@ -23,7 +23,7 @@ html(lang="es")
                     button(type="button",class="navbar-toggle collapsed",data-toggle="collapse",data-target="#fastwork-navbar",aria-expanded="false")
                         span(class="sr-only") Menu
                         span(class="fa fa-bars",style="color:white;")
-                    a(class="navbar-brand",rel="home",href="#",title="Fast Work Colombia")
+                    a(class="navbar-brand",rel="home",href="/",title="Fast Work Colombia")
                         img(src="{% static 'imagenes/logo-2.png' %}")
                 div(class="collapse navbar-collapse",id="fastwork-navbar")
                     ul(class="nav navbar-nav navbar-right")
