--- a/templates/base.jade
+++ b/templates/base.jade
@@ -61,8 +61,8 @@ html(lang="es")
             div(class="container-fluid footer-content")
                 div(class="row")
                     div(class="col-md-6 text-center")
+                        p Correo: gerencia@fastworkcolombia.com
                     div(class="col-md-6 text-center")
-                        p(class="inline") Contáctanos:
                         ul(class="footer-social-list text-center inline")
                             a(href="https://www.facebook.com/fastworkcolombia/",target="_blank")
                                 li(class="fa fa-facebook-square fa-2x")
