--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -136,6 +136,7 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
   width 200px
   overflow:hidden;
   border-radius 50%
+  background white
 
 .avatar-account img
   max-height 100%
