--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -143,6 +143,8 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
   -webkit-transform translate(-50%)
   margin-left 100px
 
+.json-cards
+  padding 0px 0px 0px 30px
 
 
 
