--- a/templates/ofertas/inicio.jade
+++ b/templates/ofertas/inicio.jade
@@ -66,7 +66,7 @@ block body_content
 
 
 
-            div(class="col-sm-9")
+            div(class="col-sm-9 json-cards")
                 div(class="ofertas_render")
                 nav
                     ul(class="pager")
