--- a/templates/base.jade
+++ b/templates/base.jade
@@ -24,7 +24,7 @@ html(lang="es")
                         span(class="sr-only") Menu
                         span(class="fa fa-bars",style="color:white;")
                     a(class="navbar-brand",rel="home",href="/",title="Fast Work Colombia")
-                        img(src="{% static 'imagenes/logo-2.png' %}")
+                        img(src="{% static 'imagenes/logo.svg' %}")
                 div(class="collapse navbar-collapse",id="fastwork-navbar")
                     ul(class="nav navbar-nav navbar-right")
                         | {% if user.is_authenticated %}
