--- a/templates/home.jade
+++ b/templates/home.jade
@@ -14,7 +14,7 @@ block body_content
     div(class="body-header")
         div(class="container-fluid banner-white")
             div(class="row row-home")
-                img(class="img-responsive center-block vcenter",src="{% static 'imagenes/logo.png' %}")
+                img(class="img-responsive center-block vcenter",src="{% static 'imagenes/logo.svg' %}")
     div(class="body-content")
         div(class="container")
             div(class="row")
