--- a/templates/base.jade
+++ b/templates/base.jade
@@ -7,7 +7,7 @@ html(lang="es")
         meta(name="viewport",content="width=device-width, initial-scale=1")
         meta(property="og:title",content="FastWork Colombia")
         meta(property="og:description",content="Puedes suscribirte o iniciar sesión usando tu cuenta de Facebook, Twitter o Gmail, solo usamos estas cuentas para generar tu usuario y conocer tu correo electrónico, de ninguna manera compartiremos tu información con terceros, si lo prefieres tambien puedes registrarte de manera tradicional confirmando tu correo electrónico.")
-        meta(property="og:image",content="{% static 'imagenes/fastwork.png' %}")
+        meta(property="og:image",content="http://www.fastworkcolombia.com/static/imagenes/fastwork.png")
         link(rel='shortcut icon',href="{% static 'imagenes/icon.png' %}")
         link(href='https://fonts.googleapis.com/css?family=Lato:300,400,700&subset=latin',rel='stylesheet',media="all")
         title
