--- a/templates/base.jade
+++ b/templates/base.jade
@@ -85,5 +85,6 @@ html(lang="es")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js")
         script(src="https://cdn.jsdelivr.net/jquery.chained/0.9.9/jquery.chained.remote.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.5.2/jquery.timeago.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.2/Chart.min.js")
         script(src="{% static 'js/bootstrap-notify.min.js' %}")
         block extra_script
