--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -39,6 +39,9 @@ a
 .navbar-brand > img
   height 40px
 
+.avatar
+  margin 0px
+
 .avatar img
   height 40px
   border-radius 50%
@@ -138,10 +141,25 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
   border-radius 50%
   background white
 
+.img-avatar
+  height 40px
+  width 40px
+  overflow:hidden;
+  border-radius 50%
+  background white
+  display inline-block
+
+
 .avatar-account img
   max-height 100%
   -webkit-transform translate(-50%)
   margin-left 100px
+
+.img-avatar img
+  border-radius 0
+  max-height 100%
+  -webkit-transform translate(-50%)
+  margin-left 20px
 
 .json-cards
   padding 0px 0px 0px 30px
