--- a/templates/base.jade
+++ b/templates/base.jade
@@ -36,15 +36,16 @@ html(lang="es")
                     ul(class="nav navbar-nav navbar-right")
                         | {% if user.is_authenticated %}
                         li(class="dropdown avatar")
-                            a(href="#",class="dropdown-toggle",data-toggle="dropdown",role="button",aria-haspopup="true",aria-expanded="false")
-                                |{% if user.photo_email != "" %}
-                                img(src="{{MEDIA_URL}}{{user.photo_email}}")
-                                |{% elif user.photo != None %}
-                                img(src="{{user.photo}}")
-                                |{% else %}
-                                img(src="{% static 'imagenes/unknown_user.png' %}")
-                                |{% endif %}
-                                span(class="caret")
+                            a(href="#",class="dropdown-toggle",style="padding:5px 15px 0px 15px;",data-toggle="dropdown",role="button",aria-haspopup="true",aria-expanded="false")
+                                div(class="img-avatar")
+                                    |{% if user.photo_email != "" %}
+                                    img(src="{{MEDIA_URL}}{{user.photo_email}}")
+                                    |{% elif user.photo != None %}
+                                    img(src="{{user.photo}}")
+                                    |{% else %}
+                                    img(src="{% static 'imagenes/unknown_user.png' %}")
+                                    |{% endif %}
+                                i(class="fa fa-caret-down",aria-hidden="true")
                             ul(class="dropdown-menu user-options")
                                 li
                                     a(href="/ofertas/") Ofertas
