--- a/static/css/base.css
+++ b/static/css/base.css
@@ -510,3 +510,12 @@ ul li {
 .border-comparativa {
   border-right: solid 1px #d9d9d9;
 }
+.margin-top-title {
+  margin: 20px 0;
+}
+.margin-top-desc {
+  margin: 60px 0;
+}
+.row-fin {
+  margin-bottom: 200px;
+}
