--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -487,3 +487,12 @@ ul
 
 .border-comparativa
   border-right solid 1px #d9d9d9
+
+.margin-top-title
+  margin 20px 0
+
+.margin-top-desc
+  margin 60px 0
+
+.row-fin
+  margin-bottom 200px
