--- a/templates/ofertas/eliminar.jade
+++ b/templates/ofertas/eliminar.jade
@@ -7,5 +7,5 @@ block body_content
         |{% for postulado in postulados %}
         div(class="row")
             div(class="col-md-12")
-               a(href="{{postulado.hv}}") {{postulado.fullname}} : {{postulado.hv}}
+               a(href="/media/{{postulado.hv}}") {{postulado.fullname}} : {{postulado.hv}}
         |{% endfor %}
