--- a/static/css/base.css
+++ b/static/css/base.css
@@ -514,8 +514,11 @@ ul li {
   margin: 20px 0;
 }
 .margin-top-desc {
-  margin: 60px 0;
+  margin: 10px 0;
 }
 .row-fin {
   margin-bottom: 200px;
+}
+.row-margin-bottom {
+  margin-bottom: 50px;
 }
