--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -492,7 +492,10 @@ ul
   margin 20px 0
 
 .margin-top-desc
-  margin 60px 0
+  margin 10px 0
 
 .row-fin
   margin-bottom 200px
+
+.row-margin-bottom
+  margin-bottom 50px
