--- a/templates/hv/inicio.jade
+++ b/templates/hv/inicio.jade
@@ -200,7 +200,7 @@ block body_content
                                             option Educación Básica Secundaria
                                             option Bachillerato / Educación Media
                                             option Universidad / Carrera técnica
-                                            option Universidad / Carrera tennológica
+                                            option Universidad / Carrera tecnológica
                                             option Universidad / Carrera Profesional
                                             option Postgrado / Especialización
                                             option Postgrado / Maestría
